--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
                             "src/assets/scss/style.scss",
                             "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
                             "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-                            "node_modules/animate.css/animate.css"
+                            "node_modules/animate.css/animate.css",
+                            "node_modules/angular-notifier/styles.css"
                         ],
                         "scripts": [
                             "node_modules/chart.js/dist/Chart.js",
