--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "@types/chart.js": "^2.9.0",
     "angular-bootstrap-md": "^8.6.0",
+    "angular-notifier": "^6.0.1",
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
     "core-js": "^2.6.9",
