--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
                             "src/assets"
                         ],
                         "styles": [
+                            "src/style.css",
                             "src/assets/scss/style.scss",
                             "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
                             "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
@@ -77,7 +78,7 @@
                         "tsConfig": "src/tsconfig.spec.json",
                         "karmaConfig": "src/karma.conf.js",
                         "styles": [
-                            "src/styles.css"
+                            
                         ],
                         "scripts": [],
                         "assets": [
