--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/chart.js": "^2.9.0",
     "angular-bootstrap-md": "^8.6.0",
     "angular-notifier": "^6.0.1",
+    "angular-timer": "^1.3.5",
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
     "core-js": "^2.6.9",
